force-apps/deploy/main/default/objects/PropertyOpenHouseSchedule__c/fields/Broker__c.field-meta.xml
<CustomField>
    <fullName>Broker__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Broker</label>
    <referenceTo>Broker__c</referenceTo>
    <relationshipLabel>Open House Events</relationshipLabel>
    <relationshipName>OpenHouseEvents</relationshipName>
    <type>Lookup</type>
</CustomField>