force-apps/deploy/main/default/objects/PropertyOpenHouseSchedule__c/fields/DateTime__c.field-meta.xml
<CustomField>
    <fullName>DateTime__c</fullName>
    <label>DateTime</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>